@@ -1,3 +1,8 @@
+Release 201
+
+* set rpm build root correctly
+
+--------------------------------------------
 Release 200
 
 * use crossover rather than centroid in tcals
